# ghost-client

./: .gitignore  LICENSE  README.md
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/src/auth/: mod.rs
web/: .prettierrc  api-settings.html  index-tailwind.html  index.html  messages.json  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/.zed/: settings.json
web/css/: style.css
web/js/: app.js
web/src/app/: layout.tsx  page.tsx
web/src/app/alerts/: page.tsx
web/src/app/clients/: page.tsx
web/src/app/clients/[id]/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/detection-rules/: page.tsx
web/src/app/login/: page.tsx
web/src/app/metrics/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/settings/apikeys/: page.tsx
web/src/app/settings/notifications/: page.tsx
web/src/app/settings/security/: page.tsx
web/src/app/settings/storage/: page.tsx
web/src/app/settings/system/: page.tsx
web/src/app/settings/users/: page.tsx
web/src/app/setup/: page.tsx
web/src/components/: MessageDisplay.tsx
web/src/components/layout/: MainLayout.tsx  Sidebar.tsx
web/src/components/providers/: I18nProvider.tsx
web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LanguageSelector.tsx
web/src/hooks/: useMessages.ts
web/src/i18n/: index.ts  messageParser.ts
web/src/i18n/locales/: en.json  ja.json
web/src/lib/: api.ts
web/src/pages/: HelpPage.tsx
web/src/stores/: auth.ts
web/src/types/: messages.ts
