[package]
name = "ghost-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ghost Security Team <security@snowcode.jp>"]
license = "MIT"
description = "CLI tool for Ghost security monitoring"
repository = "https://github.com/snowcode-jp/ghost-client"
keywords = ["security", "monitoring", "cli"]

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Display
colored = "2.1"
tabled = "0.16"

# Client Authentication - Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
hostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
